--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ a:hover{
     font-weight: 600;
     font-family: var(--regular-font);
 }
-.hero_content .hero_name,
+.hero_name,
 .about_name{
     font-size: 3.75rem;
     font-weight: 700;
@@ -203,7 +203,7 @@ a:hover{
     .hero_content .sub_title,.about_sub {
         font-size: 1.125rem;
     }
-    .hero_content .hero_name,.about_name {
+  .hero_name,.about_name {
         font-size: 2.15rem;
     }
     .hero_content {
@@ -230,7 +230,11 @@ a:hover{
      width: 18%;
  }
 
-
+ @media (max-width: 576px){
+    .about_btn{
+        width: 100%;
+    }
+ }
 
  /* Skile Section */
  .skile_section{
